--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "rxjs": "~7.5.0",
+    "slick-slider": "^1.8.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
