--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,14 @@
             ],
             "styles": [
               "src/assets/css/styles.css",
+              "src/assets/css/owl.theme.default.min.css",
+              "src/assets/css/owl.carousel.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "src/assets/js/owl.carousel.min.js",
               "src/assets/js/custom.js"
             ]
           },
