--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,10 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/images",
+              "src/assets/css",
+              "src/assets/js"
             ],
             "styles": [
               "src/styles.css"
